--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,17 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# build and temp files
+build
+build.xml
+META-INF
+manifest.mf
+out
+
+# ide settings
+.project
+.settings
+nbproject
+.idea
+*.iml
